--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="pt4 flex justify-center items-center text-center">
-  <app-ads provider="coinserom" type="728x90"></app-ads>
+<div class="pt-4 flex justify-center items-center text-center">
+  <app-ads provider="a-ads" type="728x90" dynamic="728x90"></app-ads>
 </div>
 <div class="px-2 pt-4" *ngIf="isLoading">
   <div
@@ -233,4 +233,7 @@
       </div>
     </div>
   </div>
+</div>
+<div class="pt-4 flex justify-center items-center text-center">
+  <app-ads provider="a-ads" type="468x60" dynamic="468x60"></app-ads>
 </div>
