--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -282,7 +282,7 @@
                               {{utilService.formatNumber(char.power, 0)}} / {{utilService.formatNumber(utilService.getCharacterPowerByLevel(char.data.level) * 4, 0)}}
                             </td>
                             <td class="px-6 py-4">
-                              {{char.rank}}
+                              {{char.rep}} ({{char.rank}})
                             </td>
                             <td class="px-6 py-4">
                               {{char.data.xp}}
