--- a/src/app/includes/ads/ads.component.html
+++ b/src/app/includes/ads/ads.component.html
@@ -1,17 +1,17 @@
 <div [style]="'width:'+zone.width + 'px;height:' +zone.height +'px;text-align: center;overflow: auto;'" *ngIf="provider === 'coinserom'
-  && type === '728x90'">
+  && type === '728x90' && !subscribed">
   <iframe [src]="sanitizer.bypassSecurityTrustResourceUrl('//ads.coinserom.com/publisher?adsunit=41')"
     [style]="'width:' + zone.width + 'px;height:' + zone.height + 'px;border:0px;padding:0;background-color:
     transparent;overflow: auto;'">
   </iframe>
 </div>
 <div style="text-align: center;" *ngIf="provider === 'coinserom'
-&& type === '970x90'">
+&& type === '970x90' && !subscribed">
   <a href="https://www.coinserom.com/?referral=16895">
     <img src="https://app.coinserom.com/images/publish.gif"
       style="max-width: 100%;border-style: none;"/>
   </a>
 </div>
-<div [style]="'width:'+zone.width + 'px;height:' +zone.height +'px;display: inline-block;margin: 0 auto'" *ngIf="provider === 'a-ads'">
+<div [style]="'width:'+zone.width + 'px;height:' +zone.height +'px;display: inline-block;margin: 0 auto'" *ngIf="provider === 'a-ads' && !subscribed && this.safeUrl">
   <iframe [attr.data-aa]="zone.id" [src]="safeUrl" style='border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;'></iframe>
 </div>
