--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600">
+<nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b
+  border-gray-200 dark:border-gray-600">
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto
     p-4">
@@ -14,7 +15,8 @@
         type="button"
         class="text-gray-500 dark:text-gray-400 hover:bg-gray-100
         dark:hover:bg-gray-700 focus:outline-none focus:ring-4
-        focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5" (click)="toggleTheme()">
+        focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5"
+        (click)="toggleTheme()">
         <svg
           id="theme-toggle-dark-icon"
           class="w-5 h-5"
@@ -80,6 +82,16 @@
         <img [src]="getLogo(configService.chain)" class="h-5">
       </button>
 
+      <button
+        id="chain-btn"
+        type="button"
+        (click)="showLoginDrawer()"
+        class="inline-flex items-center font-medium justify-center px-4 py-2
+        text-sm text-gray-900 dark:text-white rounded-lg cursor-pointer
+        hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white">
+        <img src="./assets/icons/lock.svg" class="h-5">
+      </button>
+
 
       <!-- currency drawer -->
       <div id="currency-menu" #currencyMenu class="fixed top-0 right-0 z-40
@@ -96,7 +108,8 @@
           Currency</h5>
         <ul class="py-2 font-medium" role="none">
           <li *ngFor="let currency of currencyService.currencies">
-            <a [id]="'select-currency-' + currency" (click)="setCurrency(currency)"
+            <a [id]="'select-currency-' + currency"
+              (click)="setCurrency(currency)"
               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
               dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white"
               role="menuitem">
@@ -133,8 +146,166 @@
           </li>
         </ul>
       </div>
-    </div>
+      <!-- login drawer -->
+      <div id="login-menu" #loginMenu class="fixed top-0 right-0 z-40 h-screen
+        p-4 overflow-y-auto transition-transform translate-x-full bg-white w-80
+        dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-right-label">
+        <h5 id="login-label" class="inline-flex items-center mb-4
+          text-base font-semibold text-gray-500 dark:text-gray-400"><svg
+            class="w-5 h-5 mr-2" aria-hidden="true" fill="currentColor"
+            viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path
+              fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1
+              0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0
+              100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>Login</h5>
+        <form class="mb-6">
+          <div class="mb-6">
+            <label for="input-login-user" class="block mb-2 text-sm
+              font-medium
+              text-gray-900 dark:text-white">User</label>
+            <input type="text" id="input-login-user" class="bg-gray-50 border
+              border-gray-300 text-gray-900 text-sm rounded-lg
+              focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5
+              dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
+              dark:text-white dark:focus:ring-blue-500
+              dark:focus:border-blue-500"
+              required>
+          </div>
+          <div class="mb-6">
+            <label for="input-login-pin" class="block mb-2 text-sm
+              font-medium
+              text-gray-900 dark:text-white">Pin</label>
+            <input type="password" id="input-login-pin"
+              (keypress)="checkPinInput($event)" class="bg-gray-50 border key
+              border-gray-300 text-gray-900 text-sm rounded-lg
+              focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5
+              dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
+              dark:text-white dark:focus:ring-blue-500
+              dark:focus:border-blue-500"
+              required>
+          </div>
 
+          <div class="grid grid-cols-2 gap-4">
+            <button id="login-btn" type="button" class="text-white
+              bg-gray-700
+              hover:bg-gray-800
+              w-full focus:ring-4 focus:ring-gray-300 font-medium rounded-lg
+              text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-600
+              dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800
+              block" (click)="showCreateDrawer()">Create Account</button>
+            <button id="login-btn" type="button" class="text-white
+              bg-blue-700
+              hover:bg-blue-800
+              w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
+              text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600
+              dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800
+              block" (click)="login()">Login</button>
+          </div>
+        </form>
+      </div>
+      <!-- create drawer -->
+      <div id="create-menu" #createMenu class="fixed top-0 right-0 z-40 h-screen
+        p-4 overflow-y-auto transition-transform translate-x-full bg-white w-80
+        dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-right-label">
+        <h5 id="create-label" class="inline-flex items-center mb-4
+          text-base font-semibold text-gray-500 dark:text-gray-400"><svg
+            class="w-5 h-5 mr-2" aria-hidden="true" fill="currentColor"
+            viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path
+              fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1
+              0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0
+              100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>Create
+          Account</h5>
+        <form class="mb-6">
+          <div class="mb-6">
+            <label for="input-create-user" class="block mb-2 text-sm
+              font-medium
+              text-gray-900 dark:text-white">User</label>
+            <input type="text" id="input-create-user" class="bg-gray-50 border
+              border-gray-300 text-gray-900 text-sm rounded-lg
+              focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5
+              dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
+              dark:text-white dark:focus:ring-blue-500
+              dark:focus:border-blue-500"
+              required>
+          </div>
+          <div class="mb-6">
+            <label for="input-create-pin" class="block mb-2 text-sm
+              font-medium
+              text-gray-900 dark:text-white">Pin</label>
+            <input type="password" id="input-create-pin"
+              (keypress)="checkPinInput($event)" class="bg-gray-50 border key
+              border-gray-300 text-gray-900 text-sm rounded-lg
+              focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5
+              dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
+              dark:text-white dark:focus:ring-blue-500
+              dark:focus:border-blue-500"
+              required>
+          </div>
+          <div class="mb-6">
+            <label for="input-create-pin2" class="block mb-2 text-sm
+              font-medium
+              text-gray-900 dark:text-white">Confirm Pin</label>
+            <input type="password" id="input-create-pin2"
+              (keypress)="checkPinInput($event)" class="bg-gray-50 border key
+              border-gray-300 text-gray-900 text-sm rounded-lg
+              focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5
+              dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
+              dark:text-white dark:focus:ring-blue-500
+              dark:focus:border-blue-500"
+              required>
+          </div>
+
+          <div class="grid grid-cols-2 gap-4">
+            <button id="login-btn" type="button" class="text-white
+              bg-gray-700
+              hover:bg-gray-800
+              w-full focus:ring-4 focus:ring-gray-300 font-medium rounded-lg
+              text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-600
+              dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800
+              block" (click)="showLoginDrawer()">Login</button>
+
+            <button id="login-btn" type="button" class="text-white
+              bg-blue-700
+              hover:bg-blue-800
+              w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
+              text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600
+              dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800
+              block" (click)="createAccount()">Create Account</button>
+          </div>
+        </form>
+      </div>
+      <!-- user info drawer -->
+      <div id="user-info-menu" #userInfoMenu class="fixed top-0 right-0 z-40
+        h-screen
+        p-4 overflow-y-auto transition-transform translate-x-full bg-white w-80
+        dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-right-label">
+        <h5 id="user-info-label" class="inline-flex items-center mb-4
+          text-base font-semibold text-gray-500 dark:text-gray-400"><svg
+            class="w-5 h-5 mr-2" aria-hidden="true" fill="currentColor"
+            viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path
+              fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1
+              0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0
+              100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>User
+          Info</h5>
+        <dl>
+          <dt class="mb-2 font-semibold leading-none text-warning-900
+            dark:text-warning-500">User</dt>
+          <dd class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400">{{subService.user}}</dd>
+          <dt class="mb-2 font-semibold leading-none text-warning-900
+            dark:text-warning-500">Subscription</dt>
+          <dd class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+            *ngIf="configService.subscribed">Subscribed until <span
+              class="text-success">{{formatDate(subService.expiry)}}</span></dd>
+          <dd class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
+            *ngIf="!configService.subscribed"><a
+              (click)="showSubscriptionModal()">Subscribe Now</a></dd>
+        </dl>
+        <button type="button" class="inline-flex w-full items-center text-white
+          justify-center bg-red-600 hover:bg-red-700 focus:ring-4
+          focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm
+          px-5 py-2.5 text-center dark:bg-red-500 dark:hover:bg-red-600
+          dark:focus:ring-red-900" (click)="logout()">Logout</button>
+      </div>
+    </div>
     <!-- main menu-->
 
     <button
@@ -180,7 +351,8 @@
             routerLink="/tracker/accounts"
             class="block py-2 pl-3 pr-4 rounded text-gray-900 hover:bg-gray-100
             md:hover:bg-transparent md:border-0 md:hover:text-warning-700 md:p-0
-            dark:text-white md:dark:hover:text-warning-500 dark:hover:bg-gray-700
+            dark:text-white md:dark:hover:text-warning-500
+            dark:hover:bg-gray-700
             dark:hover:text-white md:dark:hover:bg-transparent">Accounts</a>
         </li>
         <li>
@@ -188,7 +360,8 @@
             routerLink="/tracker/treasury"
             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100
             md:hover:bg-transparent md:border-0 md:hover:text-warning-700 md:p-0
-            dark:text-white md:dark:hover:text-warning-500 dark:hover:bg-gray-700
+            dark:text-white md:dark:hover:text-warning-500
+            dark:hover:bg-gray-700
             dark:hover:text-white md:dark:hover:bg-transparent">Treasury</a>
         </li>
         <li>
@@ -196,7 +369,8 @@
             routerLink="/tracker/options"
             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100
             md:hover:bg-transparent md:border-0 md:hover:text-warning-700 md:p-0
-            dark:text-white md:dark:hover:text-warning-500 dark:hover:bg-gray-700
+            dark:text-white md:dark:hover:text-warning-500
+            dark:hover:bg-gray-700
             dark:hover:text-white md:dark:hover:bg-transparent">Options</a>
         </li>
       </ul>
