--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -269,7 +269,7 @@
               w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
               text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600
               dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800
-              block" (click)="createAccount()">Create Account</button>
+              block" (click)="createAccount()" [disabled]="isCreating ? 'true' : null">Create Account</button>
           </div>
         </form>
       </div>
