fix element ids

--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -185,14 +185,14 @@
           </div>
 
           <div class="grid grid-cols-2 gap-4">
-            <button id="login-btn" type="button" class="text-white
+            <button id="show-create-account-btn2" type="button" class="text-white
               bg-gray-700
               hover:bg-gray-800
               w-full focus:ring-4 focus:ring-gray-300 font-medium rounded-lg
               text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-600
               dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800
               block" (click)="showCreateDrawer()">Create Account</button>
-            <button id="login-btn" type="button" class="text-white
+            <button id="show-login-btn2" type="button" class="text-white
               bg-blue-700
               hover:bg-blue-800
               w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
@@ -255,7 +255,7 @@
           </div>
 
           <div class="grid grid-cols-2 gap-4">
-            <button id="login-btn" type="button" class="text-white
+            <button id="show-login-btn" type="button" class="text-white
               bg-gray-700
               hover:bg-gray-800
               w-full focus:ring-4 focus:ring-gray-300 font-medium rounded-lg
@@ -263,7 +263,7 @@
               dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800
               block" (click)="showLoginDrawer()">Login</button>
 
-            <button id="login-btn" type="button" class="text-white
+            <button id="show-create-account-btn" type="button" class="text-white
               bg-blue-700
               hover:bg-blue-800
               w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
