--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -6,7 +6,8 @@
     2xl:col-span-2 dark:border-gray-700 sm:p-6 dark:bg-gray-800">
     <div class="mb-6">
 
-      <h2 id="group-menu-btn" class="text-2xl font-medium leading-tight text-center
+      <h2 id="group-menu-btn" class="text-2xl font-medium leading-tight
+        text-center
         text-warning-500 cursor-pointer mb-4" (click)="showGroupsDrawer()">{{configService.getAllGroups().length
         > 0 ? groupService.getActiveGroupName() : 'No Group'}}</h2>
 
@@ -35,7 +36,8 @@
                 [ngClass]="i === 0 ? 'rounded-t-lg' : 'rounded-none'"
                 type="button"
                 data-te-collapse-init
-                [attr.data-te-collapse-collapsed]="configService.expanded ? null : ''"
+                [attr.data-te-collapse-collapsed]="configService.expanded ? null
+                : ''"
                 [attr.data-te-target]="'#account-content-' + i "
                 [attr.aria-expanded]="configService.expanded ? true : false"
                 [attr.aria-controls]="'#account-content-' + i ">
@@ -54,13 +56,12 @@
                       0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                 </span>
                 {{groupService.getAccountName(account)}}
-                ({{utilService.addressPrivacy(account)}}) | Unc:
-                {{utilService.formatNumber(variableService.accountBalances
-                && variableService.accountBalances[i] ? variableService.accountBalances[i].unclaimed
-                : 0)}}{{configService.display ? ' (' + utilService.convertTokenToLocalCurrency(variableService.accountBalances[i].unclaimed, configService.version, prices, configService.currency) + ')' : ''}}
+                ({{utilService.addressPrivacy(account)}}){{displayCurrency(i)}}
               </button>
-              <span [class]="'text-xs font-medium mr-2 px-2.5 py-0.5 rounded ' + variableService.readyToFightClass">{{variableService.readyToFight[i]}}</span>
-              <a [id]="'account-menu-btn-' + i" class="ml-auto cursor-pointer px-4 text-md text-warning-500"
+              <span [class]="'text-xs font-medium mr-2 px-2.5 py-0.5 rounded ' +
+                variableService.readyToFightClass">{{variableService.readyToFight[i]}}</span>
+              <a [id]="'account-menu-btn-' + i" class="ml-auto cursor-pointer
+                px-4 text-md text-warning-500"
                 (click)="showAccountDrawer(account)">...</a>`
             </div>
           </h2>
@@ -81,7 +82,8 @@
                   <div role="status" class="animate-pulse w-full"
                     *ngIf="isLoading">
                     <div
-                      class="grid w-full grid-cols-1 lg:grid-cols-2 gap-4 xl:grid-cols-4">
+                      class="grid w-full grid-cols-1 lg:grid-cols-2 gap-4
+                      xl:grid-cols-4">
                       <div class="items-center p-2 border border-2
                         border-warning-500 rounded">
                         <div class="flex items-center mb-2">
@@ -127,7 +129,8 @@
                   <!-- end skeleton -->
                   <div class="w-full" *ngIf="!isLoading">
                     <div
-                      class="grid w-full grid-cols-1 lg:grid-cols-2 gap-4 xl:grid-cols-4">
+                      class="grid w-full grid-cols-1 lg:grid-cols-2 gap-4
+                      xl:grid-cols-4">
                       <div class="items-center p-2 border border-2
                         border-warning-500 rounded">
                         <div class="flex items-center mb-2">
@@ -136,8 +139,11 @@
                           <div class="w-full text-sm font-medium
                             dark:text-white
                             text-right">{{utilService.formatNumber(variableService.accountBalances
-                            && variableService.accountBalances[i] ? variableService.accountBalances[i].gas :
-                            0)}}{{configService.display ? ' (' + utilService.convertGasToLocalCurrency(variableService.accountBalances[i].gas, prices, configService.currency) + ')' : ''}}</div>
+                            && variableService.accountBalances[i] ?
+                            variableService.accountBalances[i].gas :
+                            0)}}{{configService.display ? ' (' +
+                            utilService.convertGasToLocalCurrency(variableService.accountBalances[i].gas,
+                            prices, configService.currency) + ')' : ''}}</div>
                         </div>
                       </div>
                       <div class="items-center p-2 border border-2
@@ -148,8 +154,12 @@
                           <div class="w-full text-sm font-medium
                             dark:text-white
                             text-right">{{utilService.formatNumber(variableService.accountBalances
-                            && variableService.accountBalances[i] ? variableService.accountBalances[i].unclaimed
-                            : 0)}}{{configService.display ? ' (' + utilService.convertTokenToLocalCurrency(variableService.accountBalances[i].unclaimed, configService.version, prices, configService.currency) + ')' : ''}}</div>
+                            && variableService.accountBalances[i] ?
+                            variableService.accountBalances[i].unclaimed
+                            : 0)}}{{configService.display ? ' (' +
+                            utilService.convertTokenToLocalCurrency(variableService.accountBalances[i].unclaimed,
+                            configService.version, prices,
+                            configService.currency) + ')' : ''}}</div>
                         </div>
                       </div>
                       <div class="items-center p-2 border border-2
@@ -160,8 +170,12 @@
                           <div class="w-full text-sm font-medium
                             dark:text-white
                             text-right">{{utilService.formatNumber(variableService.accountBalances
-                            && variableService.accountBalances[i] ? variableService.accountBalances[i].claimable
-                            : 0)}}{{configService.display ? ' (' + utilService.convertTokenToLocalCurrency(variableService.accountBalances[i].claimable, configService.version, prices, configService.currency) + ')' : ''}}</div>
+                            && variableService.accountBalances[i] ?
+                            variableService.accountBalances[i].claimable
+                            : 0)}}{{configService.display ? ' (' +
+                            utilService.convertTokenToLocalCurrency(variableService.accountBalances[i].claimable,
+                            configService.version, prices,
+                            configService.currency) + ')' : ''}}</div>
                         </div>
                       </div>
                       <div class="items-center p-2 border border-2
@@ -172,8 +186,12 @@
                           <div class="w-full text-sm font-medium
                             dark:text-white
                             text-right">{{utilService.formatNumber(variableService.accountBalances
-                            && variableService.accountBalances[i] ? variableService.accountBalances[i].wallet :
-                            0)}}{{configService.display ? ' (' + utilService.convertTokenToLocalCurrency(variableService.accountBalances[i].wallet, configService.version, prices, configService.currency) + ')' : ''}}</div>
+                            && variableService.accountBalances[i] ?
+                            variableService.accountBalances[i].wallet :
+                            0)}}{{configService.display ? ' (' +
+                            utilService.convertTokenToLocalCurrency(variableService.accountBalances[i].wallet,
+                            configService.version, prices,
+                            configService.currency) + ')' : ''}}</div>
                         </div>
                       </div>
                     </div>
@@ -184,7 +202,8 @@
                 <div
                   class="items-center justify-between p-2 col-span-4">
                   <div class="w-full">
-                    <div class="relative overflow-x-scroll hover:overflow-x-scroll
+                    <div class="relative overflow-x-scroll
+                      hover:overflow-x-scroll
                       shadow-md">
                       <table class="w-full text-sm text-left text-gray-500
                         dark:text-gray-400">
@@ -275,11 +294,14 @@
                             <td class="px-6 py-4">
                               {{char.data.level + 1}}
                             </td>
-                            <td class="px-6 py-4" [ngClass]="utilService.elementColor(char.data.traitName)">
+                            <td class="px-6 py-4"
+                              [ngClass]="utilService.elementColor(char.data.traitName)">
                               {{char.data.traitName}}
                             </td>
                             <td class="px-6 py-4">
-                              {{utilService.formatNumber(char.power, 0)}} / {{utilService.formatNumber(utilService.getCharacterPowerByLevel(char.data.level) * 4, 0)}}
+                              {{utilService.formatNumber(char.power, 0)}} /
+                              {{utilService.formatNumber(utilService.getCharacterPowerByLevel(char.data.level)
+                              * 4, 0)}}
                             </td>
                             <td class="px-6 py-4">
                               {{char.rep}} ({{char.rank}})
@@ -291,9 +313,14 @@
                               {{char.exp}}
                             </td>
                             <td class="px-6 py-4">
-                              {{char.nextLevel.level + 1}} (<span [class]="char.nextExp <= 0 ? 'text-warning-500' : null">{{char.nextExp <= 0 ? 'Claim now' : char.nextExp.toLocaleString('en-US') + ' exp left'}}</span>)
+                              {{char.nextLevel.level + 1}} (<span
+                                [class]="char.nextExp <= 0 ? 'text-warning-500'
+                                : null">{{char.nextExp <= 0 ? 'Claim now' :
+                                  char.nextExp.toLocaleString('en-US') + ' exp
+                                  left'}}</span>)
                             </td>
-                            <td class="px-6 py-4" [ngClass]="getStaminaColor(char.stamina)">
+                            <td class="px-6 py-4"
+                              [ngClass]="getStaminaColor(char.stamina)">
                               {{char && char.stamina ? char.stamina : ''}}
                             </td>
                           </tr>
@@ -345,7 +372,8 @@
         <h5 id="groups-label" class="items-center mb-2
           text-base font-semibold text-gray-500 dark:text-gray-400
           text-center">Actions</h5>
-        <button id="manage-group-btn" type="button" class="text-white bg-warning-700
+        <button id="manage-group-btn" type="button" class="text-white
+          bg-warning-700
           hover:bg-warning-800
           w-full focus:ring-4 focus:ring-warning-300 font-medium rounded-lg
           text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-warning-600
@@ -353,7 +381,8 @@
           dark:focus:ring-warning-800
           block" (click)="showManageGroupDrawer()"
           [disabled]="configService.getAllGroups().length === 0">Manage Group</button>
-        <button id="new-group-btn" type="button" class="text-white bg-success-700
+        <button id="new-group-btn" type="button" class="text-white
+          bg-success-700
           hover:bg-success-800
           w-full focus:ring-4 focus:ring-success-300 font-medium rounded-lg
           text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-success-600
@@ -362,7 +391,8 @@
           block" (click)="showNewGroupDrawer()">New Group</button>
 
         <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
-        <button id="add-account-btn" type="button" class="text-white bg-primary-700
+        <button id="add-account-btn" type="button" class="text-white
+          bg-primary-700
           hover:bg-primary-800
           w-full focus:ring-4 focus:ring-primary-300 font-medium rounded-lg
           text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-primary-600
@@ -396,7 +426,8 @@
               dark:focus:border-blue-500"
               required>
           </div>
-          <button id="save-new-group-btn" type="button" class="text-white bg-blue-700
+          <button id="save-new-group-btn" type="button" class="text-white
+            bg-blue-700
             hover:bg-blue-800
             w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
             text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600
@@ -431,7 +462,8 @@
               dark:focus:border-blue-500"
               required [value]="groupService.getActiveGroupName()">
           </div>
-          <button id="save-manage-group-btn" type="button" class="text-white bg-blue-700
+          <button id="save-manage-group-btn" type="button" class="text-white
+            bg-blue-700
             hover:bg-blue-800
             w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
             text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600
@@ -488,7 +520,8 @@
               dark:focus:border-blue-500"
               required>
           </div>
-          <button id="save-new-account-btn" type="button" class="text-white bg-blue-700
+          <button id="save-new-account-btn" type="button" class="text-white
+            bg-blue-700
             hover:bg-blue-800
             w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
             text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600
@@ -537,14 +570,16 @@
               dark:focus:border-blue-500"
               required>
           </div>
-          <button id="save-manage-account-btn" type="button" class="text-white bg-blue-700
+          <button id="save-manage-account-btn" type="button" class="text-white
+            bg-blue-700
             hover:bg-blue-800
             w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
             text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600
             dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800
             block" (click)="saveManageAccount()">Save</button>
           <hr class="h-px my-5 bg-gray-200 border-0 dark:bg-gray-700">
-          <button id="combat-simulate-btn" type="button" class="text-white bg-warning-700
+          <button id="combat-simulate-btn" type="button" class="text-white
+            bg-warning-700
             hover:bg-warning-800
             w-full focus:ring-4 focus:ring-warning-300 font-medium rounded-lg
             text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-warning-600
@@ -552,7 +587,8 @@
             dark:focus:ring-warning-800
             block" (click)="showCombatDrawer()" [disabled]="isLoading"
             [innerHTML]="isLoading ? 'Loading data...' : 'Combat Simulator'"></button>
-          <button id="fight-logs-btn" type="button" class="text-white bg-success-700
+          <button id="fight-logs-btn" type="button" class="text-white
+            bg-success-700
             hover:bg-success-800
             w-full focus:ring-4 focus:ring-success-300 font-medium rounded-lg
             text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-success-600
@@ -589,7 +625,8 @@
             <select id="input-character" data-te-select-init
               data-te-select-filter="true" class="">
               <option [value]="char.data.id" *ngFor="let char of
-                variableService.accountChars[activeAccountIndex]">{{char.data.id}} |
+                variableService.accountChars[activeAccountIndex]">{{char.data.id}}
+                |
                 {{char.data.traitName}} | Lv. {{char.data.level + 1}} |
                 {{char.stamina}}/200</option>
             </select>
@@ -615,7 +652,8 @@
             block" (click)="simulateCombat()" [disabled]="simulating">{{simulating
             ? 'Simulating...' : 'Simulate'}}</button>
           <hr class="h-px my-5 bg-gray-200 border-0 dark:bg-gray-700">
-          <div class="grid w-full grid-cols-3 grid-rows-2 mb-4" *ngFor="let data of simulations; let i=index">
+          <div class="grid w-full grid-cols-3 grid-rows-2 mb-4" *ngFor="let data
+            of simulations; let i=index">
             <div class="border border-2 border-gray-500 text-center p-2">
               <p class="text-warning-600 border-b-2 border-gray-500">Enemy</p>
               <span class="text-gray-500 dark:text-white">#{{i + 1}}</span>
@@ -638,7 +676,8 @@
             </div>
             <div class="border border-2 border-gray-500 text-center p-2">
               <p class="text-warning-600 border-b-2 border-gray-500">Chance</p>
-              <span [class]="utilService.chanceColor(data.chance)">{{utilService.formatNumber(data.chance * 100, 2)}}</span>
+              <span [class]="utilService.chanceColor(data.chance)">{{utilService.formatNumber(data.chance
+                * 100, 2)}}</span>
             </div>
           </div>
         </form>
@@ -649,21 +688,28 @@
 </div>
 
 <div class="fixed z-20 bottom-24 right-4">
-<button (click)="initAll()"
-  class="bg-success-600 w-12 h-12 rounded-full
-  drop-shadow-lg flex justify-center items-center text-white text-4xl
-  hover:bg-success-700 hover:drop-shadow-2xl mb-2">
-  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-    <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
-  </svg>
-</button>
-<button (click)="toggleExpanded()"
-    class="bg-warning-600 w-12 h-12 rounded-full
+  <button (click)="initAll()"
+    class="bg-success-600 w-12 h-12 rounded-full
     drop-shadow-lg flex justify-center items-center text-white text-4xl
-    hover:bg-warning-700 hover:drop-shadow-2xl">
-    <svg _ngcontent-qfp-c20="" fill="currentColor" viewBox="0 0
-        20 20" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 shrink-0" [style]="configService.expanded ? 'transform: rotate(180deg);' : ''"><path _ngcontent-qfp-c20="" fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10
+    hover:bg-success-700 hover:drop-shadow-2xl mb-2">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+      stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M16.023
+        9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181
+        3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0
+        0113.803-3.7l3.181 3.182m0-4.991v4.99" />
+      </svg>
+    </button>
+    <button (click)="toggleExpanded()"
+      class="bg-warning-600 w-12 h-12 rounded-full
+      drop-shadow-lg flex justify-center items-center text-white text-4xl
+      hover:bg-warning-700 hover:drop-shadow-2xl">
+      <svg _ngcontent-qfp-c20="" fill="currentColor" viewBox="0 0
+        20 20" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 shrink-0"
+        [style]="configService.expanded ? 'transform: rotate(180deg);' : ''"><path
+          _ngcontent-qfp-c20="" fill-rule="evenodd" d="M5.293 7.293a1 1 0
+          011.414 0L10
           10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414
-        0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-  </button>
-</div>
+          0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+    </button>
+  </div>
