fix price and element filter for weapons/shields

--- a/src/app/pages/market/market.component.html
+++ b/src/app/pages/market/market.component.html
@@ -33,7 +33,7 @@
             focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700
             dark:border-gray-600 dark:placeholder-gray-400 dark:text-white
             dark:focus:ring-blue-500 dark:focus:border-blue-500"
-            (change)="setMainFilter('element', $event)">
+            (change)="setMainFilter(filter.nftType === 'character' ? 'traitName' : 'element', $event)">
             <option value="-1" selected>-- All element --</option>
             <option value="0">Fire</option>
             <option value="1">Earth</option>
@@ -307,7 +307,7 @@
                         {{item.seller}}
                       </td>
                       <td class="px-6 py-4">
-                        {{utilService.formatNumber(utilService.fromEther(item.finalPrice))}}
+                        {{item.finalPrice}}
                       </td>
                       <td class="px-6 py-4">
                         <a target="_blank" [href]="getLink(item.id)"
