--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -1,5 +1,5 @@
 <div class="pt4 flex justify-center items-center text-center">
-  <app-ads provider="coinserom" type="728x90"></app-ads>
+  <app-ads provider="a-ads" type="728x90"></app-ads>
 </div>
 <div class="px-2 pt-4 mb-16">
   <div class="p-4 bg-white border border-gray-200 rounded-lg shadow-sm
