--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -236,5 +236,6 @@
   </div>
 </div>
 <div class="pt-4 flex justify-center items-center text-center">
-  <app-ads provider="a-ads" type="468x60" dynamic="468x60"></app-ads>
+  <div id="ezoic-pub-ad-placeholder-106" *ngIf="!configService.subscribed"></div>
+  <!--<app-ads provider="a-ads" type="468x60" dynamic="468x60"></app-ads>-->
 </div>
