--- a/src/app/pages/treasury/treasury.component.html
+++ b/src/app/pages/treasury/treasury.component.html
@@ -109,3 +109,8 @@
     </div>
   </div>
 </div>
+
+<div class="pt-4 flex justify-center items-center text-center">
+  <div id="ezoic-pub-ad-placeholder-108" *ngIf="!configService.subscribed"></div>
+  <!--<app-ads provider="a-ads" type="468x60" dynamic="468x60"></app-ads>-->
+</div>
