--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -203,7 +203,7 @@
         </form>
         <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
         <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-          <div id="ezoic-pub-ad-placeholder-105"></div>
+          <app-ads type="300x250"></app-ads>
         </div>
       </div>
       <!-- create drawer -->
@@ -277,7 +277,7 @@
           </div>
           <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
           <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-            <div id="ezoic-pub-ad-placeholder-105"></div>
+            <app-ads type="300x250"></app-ads>
           </div>
         </form>
       </div>
@@ -314,7 +314,7 @@
           dark:focus:ring-red-900" (click)="logout()">Logout</button>
         <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
         <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-          <div id="ezoic-pub-ad-placeholder-105"></div>
+          <app-ads type="300x250"></app-ads>
         </div>
       </div>
     </div>
