--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,5 @@
 <div class="pt-4 flex justify-center items-center text-center">
-  <!--<app-ads provider="a-ads" type="728x90"></app-ads>-->
-  <div id="ezoic-pub-ad-placeholder-102" *ngIf="!configService.subscribed"></div>
+  <app-ads provider="a-ads" type="728x90"></app-ads>
 </div>
 <div class="px-2 pt-4" *ngIf="isLoading">
   <div
@@ -236,6 +235,5 @@
   </div>
 </div>
 <div class="pt-4 flex justify-center items-center text-center">
-  <div id="ezoic-pub-ad-placeholder-106" *ngIf="!configService.subscribed"></div>
-  <!--<app-ads provider="a-ads" type="468x60" dynamic="468x60"></app-ads>-->
+  <app-ads provider="a-ads" type="468x60" dynamic="468x60"></app-ads>
 </div>
