--- a/src/app/pages/market/market.component.html
+++ b/src/app/pages/market/market.component.html
@@ -456,6 +456,5 @@
         </div>
 
         <div class="pt-4 flex justify-center items-center text-center">
-          <div id="ezoic-pub-ad-placeholder-107" *ngIf="!configService.subscribed"></div>
-          <!--<app-ads provider="a-ads" type="468x60" dynamic="468x60"></app-ads>-->
+          <app-ads provider="a-ads" type="468x60" dynamic="468x60"></app-ads>
         </div>
