--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto
     p-4">
-    <a routerLink="/tracker/home" class="flex items-center">
+    <a routerLink="/tracker/" class="flex items-center">
       <span
         class="self-center text-2xl font-semibold whitespace-nowrap
         dark:text-white"><span class="text-warning-500">CB</span> Tracker</span>
@@ -305,7 +305,7 @@
               class="text-success">{{formatDate(subService.expiry)}}</span></dd>
           <dd class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
             *ngIf="!configService.subscribed"><a
-              (click)="showSubscriptionModal()">Subscribe Now</a></dd>
+              (click)="showSubscriptionModal()" class="cursor-pointer">Subscribe Now</a></dd>
         </dl>
         <button type="button" class="inline-flex w-full items-center text-white
           justify-center bg-red-600 hover:bg-red-700 focus:ring-4
