--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -9,6 +9,74 @@
         dark:text-white"><span class="text-warning-500">CB</span> Tracker</span>
     </a>
     <div class="flex items-center md:order-2">
+      <!-- alerts -->
+      <button
+        id="alert-toggle"
+        type="button"
+        class="relative inline-flex items-center text-gray-500
+        dark:text-gray-400 hover:bg-gray-100
+        dark:hover:bg-gray-700 focus:outline-none focus:ring-4
+        focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 mr-1.5"
+        (click)="showAlerts()">
+        <svg fill="#ffffff" class="w-5 h-5" version="1.1"
+          id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 611.999
+          611.999" xml:space="preserve" stroke="#ffffff" *ngIf="configService.theme === 'dark'"><g
+            id="SVGRepo_bgCarrier" stroke-width="0"></g><g
+            id="SVGRepo_tracerCarrier" stroke-linecap="round"
+            stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <g>
+                  <path
+                    d="M570.107,500.254c-65.037-29.371-67.511-155.441-67.559-158.622v-84.578c0-81.402-49.742-151.399-120.427-181.203
+                    C381.969,34,347.883,0,306.001,0c-41.883,0-75.968,34.002-76.121,75.849c-70.682,29.804-120.425,99.801-120.425,181.203v84.578
+                    c-0.046,3.181-2.522,129.251-67.561,158.622c-7.409,3.347-11.481,11.412-9.768,19.36c1.711,7.949,8.74,13.626,16.871,13.626
+                    h164.88c3.38,18.594,12.172,35.892,25.619,49.903c17.86,18.608,41.479,28.856,66.502,28.856
+                    c25.025,0,48.644-10.248,66.502-28.856c13.449-14.012,22.241-31.311,25.619-49.903h164.88c8.131,0,15.159-5.676,16.872-13.626
+                    C581.586,511.664,577.516,503.6,570.107,500.254z
+                    M484.434,439.859c6.837,20.728,16.518,41.544,30.246,58.866H97.32
+                    c13.726-17.32,23.407-38.135,30.244-58.866H484.434z
+                    M306.001,34.515c18.945,0,34.963,12.73,39.975,30.082
+                    c-12.912-2.678-26.282-4.09-39.975-4.09s-27.063,1.411-39.975,4.09C271.039,47.246,287.057,34.515,306.001,34.515z
+                    M143.97,341.736v-84.685c0-89.343,72.686-162.029,162.031-162.029s162.031,72.686,162.031,162.029v84.826
+                    c0.023,2.596,0.427,29.879,7.303,63.465H136.663C143.543,371.724,143.949,344.393,143.97,341.736z
+                    M306.001,577.485
+                    c-26.341,0-49.33-18.992-56.709-44.246h113.416C355.329,558.493,332.344,577.485,306.001,577.485z"></path>
+                  <path
+                    d="M306.001,119.235c-74.25,0-134.657,60.405-134.657,134.654c0,9.531,7.727,17.258,17.258,17.258
+                    c9.531,0,17.258-7.727,17.258-17.258c0-55.217,44.923-100.139,100.142-100.139c9.531,0,17.258-7.727,17.258-17.258
+                    C323.259,126.96,315.532,119.235,306.001,119.235z"></path>
+                </g> </g> </g> </g></svg>
+        <svg fill="#000000" class="w-5 h-5" version="1.1"
+          id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 611.999
+          611.999" xml:space="preserve" stroke="#000000" *ngIf="configService.theme === 'light'"><g
+            id="SVGRepo_bgCarrier" stroke-width="0"></g><g
+            id="SVGRepo_tracerCarrier" stroke-linecap="round"
+            stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <g>
+                  <path
+                    d="M570.107,500.254c-65.037-29.371-67.511-155.441-67.559-158.622v-84.578c0-81.402-49.742-151.399-120.427-181.203
+                    C381.969,34,347.883,0,306.001,0c-41.883,0-75.968,34.002-76.121,75.849c-70.682,29.804-120.425,99.801-120.425,181.203v84.578
+                    c-0.046,3.181-2.522,129.251-67.561,158.622c-7.409,3.347-11.481,11.412-9.768,19.36c1.711,7.949,8.74,13.626,16.871,13.626
+                    h164.88c3.38,18.594,12.172,35.892,25.619,49.903c17.86,18.608,41.479,28.856,66.502,28.856
+                    c25.025,0,48.644-10.248,66.502-28.856c13.449-14.012,22.241-31.311,25.619-49.903h164.88c8.131,0,15.159-5.676,16.872-13.626
+                    C581.586,511.664,577.516,503.6,570.107,500.254z
+                    M484.434,439.859c6.837,20.728,16.518,41.544,30.246,58.866H97.32
+                    c13.726-17.32,23.407-38.135,30.244-58.866H484.434z
+                    M306.001,34.515c18.945,0,34.963,12.73,39.975,30.082
+                    c-12.912-2.678-26.282-4.09-39.975-4.09s-27.063,1.411-39.975,4.09C271.039,47.246,287.057,34.515,306.001,34.515z
+                    M143.97,341.736v-84.685c0-89.343,72.686-162.029,162.031-162.029s162.031,72.686,162.031,162.029v84.826
+                    c0.023,2.596,0.427,29.879,7.303,63.465H136.663C143.543,371.724,143.949,344.393,143.97,341.736z
+                    M306.001,577.485
+                    c-26.341,0-49.33-18.992-56.709-44.246h113.416C355.329,558.493,332.344,577.485,306.001,577.485z"></path>
+                  <path
+                    d="M306.001,119.235c-74.25,0-134.657,60.405-134.657,134.654c0,9.531,7.727,17.258,17.258,17.258
+                    c9.531,0,17.258-7.727,17.258-17.258c0-55.217,44.923-100.139,100.142-100.139c9.531,0,17.258-7.727,17.258-17.258
+                    C323.259,126.96,315.532,119.235,306.001,119.235z"></path>
+                </g> </g> </g> </g></svg>
+        <div class="absolute inline-flex items-center justify-center w-6 h-6
+          text-xs font-bold text-white bg-red-500 border-2 border-white
+          rounded-full -top-1 -right-1 dark:border-gray-900" *ngIf="alerts.length > 0">{{alerts.length}}</div>
+      </button>
+      <!-- end alerts -->
       <!-- theme switch -->
       <button
         id="theme-toggle"
@@ -110,7 +178,7 @@
           <li *ngFor="let currency of currencyService.currencies">
             <a [id]="'select-currency-' + currency"
               (click)="setCurrency(currency)"
-              class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
+              class="cursor-pointer block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
               dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white"
               role="menuitem">
               <div class="inline-flex items-center uppercase">
@@ -135,7 +203,7 @@
         <ul class="py-2 font-medium" role="none">
           <li *ngFor="let chain of web3Service.chains">
             <a [id]="'select-chain-' + chain" (click)="setChain(chain)"
-              class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
+              class="cursor-pointer block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
               dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white"
               role="menuitem">
               <div class="inline-flex items-center">
@@ -185,7 +253,8 @@
           </div>
 
           <div class="grid grid-cols-2 gap-4">
-            <button id="show-create-account-btn2" type="button" class="text-white
+            <button id="show-create-account-btn2" type="button"
+              class="text-white
               bg-gray-700
               hover:bg-gray-800
               w-full focus:ring-4 focus:ring-gray-300 font-medium rounded-lg
@@ -273,7 +342,8 @@
               w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
               text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600
               dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800
-              block" (click)="createAccount()" [disabled]="isCreating ? 'true' : null">Create Account</button>
+              block" (click)="createAccount()" [disabled]="isCreating ? 'true' :
+              null">Create Account</button>
           </div>
           <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
           <div class="mt-4 py-4" *ngIf="!configService.subscribed">
@@ -305,7 +375,8 @@
               class="text-success">{{formatDate(subService.expiry)}}</span></dd>
           <dd class="mb-4 font-light text-gray-500 sm:mb-5 dark:text-gray-400"
             *ngIf="!configService.subscribed"><a
-              (click)="showSubscriptionModal()" class="cursor-pointer">Subscribe Now</a></dd>
+              (click)="showSubscriptionModal()" class="cursor-pointer">Subscribe
+              Now</a></dd>
         </dl>
         <button type="button" class="inline-flex w-full items-center text-white
           justify-center bg-red-600 hover:bg-red-700 focus:ring-4
@@ -316,6 +387,32 @@
         <div class="mt-4 py-4" *ngIf="!configService.subscribed">
           <app-ads type="300x250"></app-ads>
         </div>
+      </div>
+      <!-- currency drawer -->
+      <div id="alert-menu" #alertMenu class="fixed top-0 right-0 z-40
+        h-screen
+        p-4 overflow-y-auto transition-transform translate-x-full bg-white w-80
+        dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-right-label">
+        <h5 id="alert-label" class="inline-flex items-center mb-4
+          text-base font-semibold text-gray-500 dark:text-gray-400"><svg
+            class="w-5 h-5 mr-2" aria-hidden="true" fill="currentColor"
+            viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path
+              fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1
+              0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0
+              100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>Alerts</h5>
+        <ul class="py-2 font-medium" role="none">
+          <li *ngFor="let alert of alerts">
+            <a [id]="'select-currency-' + alert.id"
+              (click)="showAlertContent(alert.id)"
+              class="cursor-pointer block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
+              dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white"
+              role="menuitem">
+              <div class="inline-flex items-center uppercase">
+                {{utilService.limitText(alert.title, 25)}}
+              </div>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
     <!-- main menu-->
