--- a/src/app/pages/options/options.component.html
+++ b/src/app/pages/options/options.component.html
@@ -1,5 +1,5 @@
 
-<div class="pt4 flex justify-center items-center text-center">
+<div class="pt-4 mt-4 flex justify-center items-center text-center">
   <app-ads provider="a-ads" type="728x90"></app-ads>
 </div>
 <div class="px-2 pt-4">
