Added privacy policy and terms of use in menu

--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -498,6 +498,24 @@
             dark:hover:bg-gray-700
             dark:hover:text-white md:dark:hover:bg-transparent">Options</a>
         </li>
+        <li>
+          <a
+            routerLink="/privacy"
+            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100
+            md:hover:bg-transparent md:border-0 md:hover:text-warning-700 md:p-0
+            dark:text-white md:dark:hover:text-warning-500
+            dark:hover:bg-gray-700
+            dark:hover:text-white md:dark:hover:bg-transparent">Privacy Policy</a>
+        </li>
+        <li>
+          <a
+            routerLink="/terms"
+            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100
+            md:hover:bg-transparent md:border-0 md:hover:text-warning-700 md:p-0
+            dark:text-white md:dark:hover:text-warning-500
+            dark:hover:bg-gray-700
+            dark:hover:text-white md:dark:hover:bg-transparent">Terms of Use</a>
+        </li>
       </ul>
     </div>
   </div>
