--- a/src/app/privacy/privacy.component.html
+++ b/src/app/privacy/privacy.component.html
@@ -2,19 +2,53 @@
 <html>
   <head>
     <title>Privacy Policy - CB Tracker (Advertisements)</title>
+    <style>
+      body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 10px;
+            font-size: 16px;
+            color: #888;
+        }
+
+        h3 {
+            margin-bottom: 10px;
+        }
+
+        ul {
+            list-style: disc;
+            margin-left: 20px;
+            margin-bottom: 10px;
+        }
+
+        p {
+            margin-bottom: 10px;
+        }
+  </style>
   </head>
-  <body>
-    <h1>Privacy Policy for CB Tracker (Advertisements)</h1>
+  <body class="relative w-full max-w-screen-2xl mx-auto h-full
+    overflow-y-auto mb-[90px] text-white">
+    <h1>Privacy Policy for <span class="text-warning-500">CB</span> Tracker
+      (Advertisements)</h1>
     <h2>Effective Date: May 15, 2023</h2>
 
-    <h3>1. Information We Collect</h3>
+    <h3 class="text-warning-500">1. Information We Collect</h3>
     <p>When you use our Service, we may collect:</p>
     <ul>
       <li>Tracking Information</li>
       <li>Cookies and Similar Technologies</li>
     </ul>
 
-    <h3>2. How We Use Your Information</h3>
+    <h3 class="text-warning-500">2. How We Use Your Information</h3>
     <p>We use the collected information to:</p>
     <ul>
       <li>Analyze ad performance and analytics</li>
@@ -23,22 +57,22 @@
       <li>Ensure legal compliance</li>
     </ul>
 
-    <h3>3. Your Choices</h3>
+    <h3 class="text-warning-500">3. Your Choices</h3>
     <p>You have the following choices:</p>
     <ul>
       <li>Opting Out</li>
       <li>Do Not Track</li>
     </ul>
 
-    <h3>4. Data Security</h3>
+    <h3 class="text-warning-500">4. Data Security</h3>
     <p>We take reasonable measures to protect the security of your information.</p>
-    <h3>5. Children's Privacy</h3>
+    <h3 class="text-warning-500">5. Children's Privacy</h3>
     <p>Our Service is not intended for individuals under the age of 13.</p>
 
-    <h3>6. Changes to this Privacy Policy</h3>
+    <h3 class="text-warning-500">6. Changes to this Privacy Policy</h3>
     <p>We may update this Privacy Policy from time to time.</p>
 
-    <h3>7. Contact Us</h3>
+    <h3 class="text-warning-500">7. Contact Us</h3>
     <p>If you have any questions or concerns, please contact us at
       edeath@cwsdev.net.</p>
 
@@ -46,6 +80,11 @@
       Tracker service for advertisements and does not cover the privacy
       practices of any third-party websites or services.</p>
 
-    <p>Thank you for using CB Tracker!</p>
+    <p>Thank you for using <span class="text-warning-500">CB</span> Tracker!</p>
+
+    <div class="fixed bottom-0 z-20 w-full h-[50px] flex justify-center
+      items-center text-center mt-[50px]">
+      <a routerLink="/tracker/home">Back to home</a>
+    </div>
   </body>
 </html>
