--- a/src/app/terms/terms.component.html
+++ b/src/app/terms/terms.component.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Terms of Service - CB Tracker</title>
+    <title>Terms of Service - <span class="text-warning-500">CB</span> Tracker</title>
+    <style>
+      body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 10px;
+            font-size: 16px;
+            color: #888;
+        }
+
+        h3 {
+            margin-bottom: 10px;
+        }
+
+        ul {
+            list-style: disc;
+            margin-left: 20px;
+            margin-bottom: 10px;
+        }
+
+        p {
+            margin-bottom: 10px;
+        }
+  </style>
   </head>
-  <body>
-    <h1>Terms of Service for CB Tracker</h1>
+  <body class="relative w-full max-w-screen-2xl mx-auto h-full
+    overflow-y-auto mb-[90px] text-white">
+    <h1>Terms of Service for <span class="text-warning-500">CB</span> Tracker</h1>
     <h2>Effective Date: [Date]</h2>
 
-    <h3>1. Use of the Website</h3>
+    <h3 class="text-warning-500">1. Use of the Website</h3>
     <p>
       <strong>1.1 Eligibility:</strong> You must be at least 18 years old to use
       the Website. By using the Website, you represent and warrant that you are
@@ -32,7 +65,7 @@
         or violates their privacy.</li>
     </ul>
 
-    <h3>2. Intellectual Property</h3>
+    <h3 class="text-warning-500">2. Intellectual Property</h3>
     <p>
       <strong>2.1 Ownership:</strong> The Website and its contents, including
       but not limited to text, graphics, images, logos, and software, are owned
@@ -44,7 +77,7 @@
       Website or its contents without our prior written consent.
     </p>
 
-    <h3>3. Disclaimer of Warranties</h3>
+    <h3 class="text-warning-500">3. Disclaimer of Warranties</h3>
     <p>
       <strong>3.1 No Warranty:</strong> The Website is provided on an "as is"
       and "as available" basis without any warranties or representations,
@@ -59,7 +92,7 @@
       Website.
     </p>
 
-    <h3>4. Limitation of Liability</h3>
+    <h3 class="text-warning-500">4. Limitation of Liability</h3>
     <p>
       <strong>4.1 Exclusion of Liability:</strong> In no event shall we be
       liable for any indirect, incidental, special, consequential, or punitive
@@ -67,7 +100,7 @@
       if we have been advised of the possibility of such damages.
     </p>
 
-    <h3>5. Indemnification</h3>
+    <h3 class="text-warning-500">5. Indemnification</h3>
     <p>
       You agree to indemnify and hold us harmless from any claims, liabilities,
       damages, losses, or expenses (including reasonable attorneys' fees)
@@ -75,33 +108,38 @@
       violation of these Terms.
     </p>
 
-    <h3>6. Modifications to the Terms</h3>
+    <h3 class="text-warning-500">6. Modifications to the Terms</h3>
     <p>
       We reserve the right to modify or update these Terms at any time without
       prior notice. Your continued use of the Website after any modifications or
       updates indicates your acceptance of the revised Terms.
     </p>
-    <h3>7. Termination</h3>
+    <h3 class="text-warning-500">7. Termination</h3>
     <p>
       We may terminate or suspend your access to the Website at any time without
       prior notice or liability for any reason, including if you violate these
       Terms.
     </p>
-    <h3>8. Governing Law</h3>
+    <h3 class="text-warning-500">8. Governing Law</h3>
     <p>
       These Terms shall be governed by and construed in accordance with the laws
       of [Jurisdiction]. Any legal action or proceeding arising out of or in
       connection with these Terms shall be brought exclusively in the courts of
       [Jurisdiction].
     </p>
-    <h3>9. Contact Us</h3>
+    <h3 class="text-warning-500">9. Contact Us</h3>
     <p>
       If you have any questions or concerns about these Terms, please contact us
       at edeath@cwsdev.net.
     </p>
 
     <p>
-      Thank you for using CB Tracker!
+      Thank you for using <span class="text-warning-500">CB</span> Tracker!
     </p>
+
+    <div class="fixed bottom-0 z-20 w-full h-[50px] flex justify-center
+      items-center text-center mt-[50px]">
+      <a routerLink="/tracker/home">Back to home</a>
+    </div>
   </body>
 </html>
