--- a/src/app/terms/terms.component.html
+++ b/src/app/terms/terms.component.html
@@ -38,7 +38,7 @@
   <body class="relative w-full max-w-screen-2xl mx-auto h-full
     overflow-y-auto mb-[90px] text-white">
     <h1>Terms of Service for <span class="text-warning-500">CB</span> Tracker</h1>
-    <h2>Effective Date: [Date]</h2>
+    <h2>Effective Date: May 15, 2023</h2>
 
     <h3 class="text-warning-500">1. Use of the Website</h3>
     <p>
@@ -120,14 +120,7 @@
       prior notice or liability for any reason, including if you violate these
       Terms.
     </p>
-    <h3 class="text-warning-500">8. Governing Law</h3>
-    <p>
-      These Terms shall be governed by and construed in accordance with the laws
-      of [Jurisdiction]. Any legal action or proceeding arising out of or in
-      connection with these Terms shall be brought exclusively in the courts of
-      [Jurisdiction].
-    </p>
-    <h3 class="text-warning-500">9. Contact Us</h3>
+    <h3 class="text-warning-500">8. Contact Us</h3>
     <p>
       If you have any questions or concerns about these Terms, please contact us
       at edeath@cwsdev.net.
