--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="pt-4 mt-4 flex justify-center items-center text-center">
-  <app-ads provider="smartyads" type="728x90" divId="test1"></app-ads>
+  <app-ads provider="smartyads" type="728x90"></app-ads>
 </div>
 <div class="px-2 pt-4" *ngIf="isLoading">
   <div
