--- a/src/app/includes/ads/ads.component.html
+++ b/src/app/includes/ads/ads.component.html
@@ -15,3 +15,7 @@
 <div [style]="'width:'+zone.width + 'px;height:' +zone.height +'px;display: inline-block;margin: 0 auto'" *ngIf="provider === 'a-ads' && !subscribed && this.safeUrl">
   <iframe [attr.data-aa]="zone.id" [src]="safeUrl" style='border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;'></iframe>
 </div>
+
+<div [style]="'width:'+zone.width + 'px;height:' +zone.height +'px;display: inline-block;margin: 0 auto'" *ngIf="provider === 'smartyads'">
+  <div id="block_827"></div>
+</div>
