--- a/src/app/pages/options/options.component.html
+++ b/src/app/pages/options/options.component.html
@@ -78,7 +78,7 @@
         dark:bg-gray-800" *ngIf="!subscribed">
         <h3 class="mb-4 text-xl font-semibold dark:text-white">Sponsor</h3>
         <div class="flex justify-center items-center text-center">
-          <app-ads provider="a-ads" type="300x250"></app-ads>
+          <app-ads  provider="smartyads" type="300x250"></app-ads>
         </div>
       </div>
     </div>
