--- a/src/app/pages/treasury/treasury.component.html
+++ b/src/app/pages/treasury/treasury.component.html
@@ -111,5 +111,5 @@
 </div>
 
 <div class="pt-4 flex justify-center items-center text-center">
-  <app-ads provider="a-ads" type="468x60" dynamic="468x60"></app-ads>
+  <app-ads provider="smartyads" type="468x60"></app-ads>
 </div>
