--- a/src/app/includes/ads/ads.component.html
+++ b/src/app/includes/ads/ads.component.html
@@ -17,5 +17,5 @@
 </div>
 
 <div [style]="'width:'+zone.width + 'px;height:' +zone.height +'px;display: inline-block;margin: 0 auto'" *ngIf="provider === 'smartyads'">
-  <div [id]="'block_' + smartyZone.id"></div>
+  <div [id]="divId"></div>
 </div>
