--- a/src/app/pages/market/market.component.html
+++ b/src/app/pages/market/market.component.html
@@ -1,5 +1,5 @@
 <div class="pt-4 mt-4 flex justify-center items-center text-center">
-  <app-ads provider="a-ads" type="728x90"></app-ads>
+  <app-ads provider="smartyads" type="728x90" divId="banner3"></app-ads>
 </div>
 <div class="px-2 pt-4 mb-16">
   <div class="p-4 bg-white border border-gray-200 rounded-lg shadow-sm
@@ -455,5 +455,5 @@
         </div>
 
         <div class="pt-4 flex justify-center items-center text-center">
-          <app-ads provider="smartyads" type="468x60"></app-ads>
+          <app-ads provider="smartyads" type="468x60" divId="sBanner3"></app-ads>
         </div>
