--- a/src/app/pages/treasury/treasury.component.html
+++ b/src/app/pages/treasury/treasury.component.html
@@ -1,6 +1,6 @@
 
 <div class="pt-4 mt-4 flex justify-center items-center text-center">
-  <app-ads provider="a-ads" type="728x90"></app-ads>
+  <app-ads provider="smartyads" type="728x90" divId="banner5"></app-ads>
 </div>
 <div class="px-2 pt-4 mb-16">
   <div class="p-4 bg-white border border-warning-200 rounded-lg shadow-sm
@@ -95,7 +95,7 @@
                   </div>
                 </div>
                 <div class="col-span-4 row-span-4 grid gap-4 items-center justify-center bg-cover bg-center text-center">
-                  <app-ads provider="a-ads" type="728x90" dynamic="728x90"></app-ads>
+                  <app-ads provider="smartyads" type="728x90" dynamic="728x90" divId="banner6"></app-ads>
                 </div>
               </div>
               <div class="w-full justify-center py-4 text-gray-900 dark:text-white">
@@ -111,5 +111,5 @@
 </div>
 
 <div class="pt-4 flex justify-center items-center text-center">
-  <app-ads provider="smartyads" type="468x60"></app-ads>
+  <app-ads provider="smartyads" type="468x60" divId="sBanner4"></app-ads>
 </div>
