--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -1,5 +1,5 @@
 <div class="pt-4 mt-4 flex justify-center items-center text-center">
-  <app-ads provider="a-ads" type="728x90"></app-ads>
+  <app-ads provider="smartyads" type="728x90" divId="banner1"></app-ads>
 </div>
 <div class="px-2 pt-4 mb-16">
   <div class="p-4 bg-white border border-gray-200 rounded-lg shadow-sm
@@ -333,7 +333,7 @@
                 <!-- ads -->
                 <div class="w-full row-span-2 p-2 flex items-center
                   justify-center">
-                  <app-ads provider="smartyads" type="250x250"></app-ads>
+                  <app-ads provider="smartyads" type="250x250"  divId="box4"></app-ads>
                 </div>
                 <!-- end ads -->
               </div>
@@ -401,7 +401,7 @@
           block" (click)="showAddAccountDrawer()">Add Account</button>
         <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
         <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-          <app-ads type="300x250" provider="smartyads"></app-ads>
+          <app-ads type="300x250" provider="smartyads"  divId="box5"></app-ads>
         </div>
       </div>
       <!-- end groups drawer -->
@@ -439,7 +439,7 @@
             block" (click)="saveNewGroup()">Save</button>
           <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
           <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-            <app-ads type="300x250" provider="smartyads"></app-ads>
+            <app-ads type="300x250" provider="smartyads" divId="box6"></app-ads>
           </div>
         </form>
       </div>
@@ -487,7 +487,7 @@
             block" (click)="deleteGroup()">Delete</button>
           <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
           <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-            <app-ads type="300x250" provider="smartyads"></app-ads>
+            <app-ads type="300x250" provider="smartyads" divId="box7"></app-ads>
           </div>
         </form>
       </div>
@@ -541,7 +541,7 @@
             block" (click)="saveAccount()">Save</button>
           <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
           <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-            <app-ads type="300x250" provider="smartyads"></app-ads>
+            <app-ads type="300x250" provider="smartyads" divId="box8"></app-ads>
           </div>
         </form>
       </div>
@@ -621,7 +621,7 @@
             block" (click)="deleteAccount()" [disabled]="isLoading">Delete</button>
           <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
           <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-            <app-ads type="300x250" provider="smartyads"></app-ads>
+            <app-ads type="300x250" provider="smartyads" divId="box9"></app-ads>
           </div>
         </form>
       </div>
@@ -702,7 +702,7 @@
           </div>
           <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
           <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-            <app-ads type="300x250" provider="smartyads"></app-ads>
+            <app-ads type="300x250" provider="smartyads" divId="box10"></app-ads>
           </div>
         </form>
       </div>
@@ -740,5 +740,5 @@
 
 
   <div class="pt-4 flex justify-center items-center text-center">
-    <app-ads provider="smartyads" type="468x60"></app-ads>
+    <app-ads provider="smartyads" type="468x60" divId="sBanner1"></app-ads>
   </div>
