--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div id="main-content" class="relative w-full max-w-screen-2xl mx-auto h-full
-  overflow-y-auto min-[335px]:mt-24 mb-[90px] max-[335px]:mt-[8.5rem]">
+  overflow-y-hidden min-[335px]:mt-24 mb-[90px] max-[335px]:mt-[8.5rem]">
   <main>
     <router-outlet></router-outlet>
   </main>
