remove cookie bot and replace ads

--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -278,7 +278,7 @@
         </form>
         <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
         <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-          <app-ads type="300x250" provider="smartyads" divId="box1"></app-ads>
+          <app-ads type="300x250" provider="a-ads" divId="box1"></app-ads>
         </div>
       </div>
       <!-- create drawer -->
@@ -353,7 +353,7 @@
           </div>
           <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
           <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-            <app-ads type="300x250" provider="smartyads" divId="box2"></app-ads>
+            <app-ads type="300x250" provider="a-ads" divId="box2"></app-ads>
           </div>
         </form>
       </div>
@@ -391,7 +391,7 @@
           dark:focus:ring-red-900" (click)="logout()">Logout</button>
         <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
         <div class="mt-4 py-4" *ngIf="!configService.subscribed">
-          <app-ads type="300x250" provider="smartyads" divId="box3"></app-ads>
+          <app-ads type="300x250" provider="a-ads" divId="box3"></app-ads>
         </div>
       </div>
       <!-- currency drawer -->
